// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dead-code-string 1`] = `
"
var React = require('react');

var Foo = function Foo(props) {
  return React.createElement('div', null);
};
Foo.propTypes = __PROD__ ? null : {
  x: require('prop-types').string.isRequired
};"
`;

exports[`dead-code-string uglify with esm 1`] = `"require(\\"react\\");import r from\\"prop-types\\";"`;

exports[`dead-code-string with esm 1`] = `
"
var React = require('react');

var Foo = function Foo(props) {
  return React.createElement('div', null);
};
Foo.propTypes = __PROD__ ? null : {
  x: PropTypes.string.isRequired
};
import PropTypes from 'prop-types';"
`;
